# flatimage

./: .clangd  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/actions/build-flatimage/: action.yml
.github/actions/install-build-tools/: action.yml
.github/actions/setup-platform-cli/: action.yml
.github/actions/test-doctest/: action.yml
.github/actions/test-unittest/: action.yml
.github/workflows/: gitea-continuous.yml  gitea-release.yml  github-continuous.yml  github-release.yml  release-gitea.yml  release-github.yml  test-doctest.yml  test-unittest.yml
cmake/: Doxygen.cmake  MkDocs.cmake  Variables.cmake
deploy/: arch.patch.sh  flatimage.sh  system.sh
doc/: Doxyfile.in
doc/doxygen/: Doxyfile.in  building.md  conventions.md  modules.md  navigating.md
doc/mkdocs/: mkdocs.yml
doc/mkdocs/docs/: comparison.md  index.md
doc/mkdocs/docs/architecture/: boot-sequence.md  directories.md  environment.md  filesystem.md  layers.md  overview.md  portal.md  process.md  reserved-space.md
doc/mkdocs/docs/cmd/: bind.md  boot.md  casefold.md  commit.md  desktop.md  env.md  exec.md  instance.md  layer.md  notify.md  overlay.md  perms.md  recipe.md  remote.md  root.md  unshare.md  version.md
doc/mkdocs/docs/configuration/: binding.md  compression.md  overlays.md  prompt.md  user-identity.md
doc/mkdocs/docs/examples/: firefox.md  steam.md
doc/mkdocs/docs/examples/alpine/: firefox.md
doc/mkdocs/docs/examples/arch/: firefox.md  steam.md
doc/mkdocs/docs/examples/blueprint/: batocera.md
doc/mkdocs/docs/howto/: multiple-instances.md
doc/mkdocs/docs/howto/configuration/: bindings.md  environment.md
doc/mkdocs/docs/howto/getting-started/: commit-changes.md  desktop-integration.md  download-and-run.md  install-applications.md  run-application.md
doc/mkdocs/docs/howto/instances/: multiple-instances.md
doc/mkdocs/docs/howto/layers/: layer-directories.md  layer-files.md
doc/mkdocs/docs/layers/: video.md
doc/mkdocs/docs/portal/: commands.md
docker/: Dockerfile.boot  Dockerfile.bwrap_apparmor  Dockerfile.doctest  Dockerfile.doxygen  Dockerfile.mkdocs  Dockerfile.portal  Dockerfile.unittest
docker/Dockerfile.mkdocs.patches/: README.md  panzoom_mermaid_support.py
scripts/: build.sh  clean-mounts.sh  dot-doxygen.sh  processes.sh
src/: CMakeLists.txt  common.hpp  config.hpp  macro.hpp
src/boot/: CMakeLists.txt  boot.cpp  filesystems.hpp  janitor.cpp  metadata.hpp  parser.hpp  portal.hpp  relocate.hpp
src/boot/cmd/: bind.hpp  desktop.hpp  help.hpp  layers.hpp
src/boot/compile_commands/: impl_setup_compile_commands.sh  setup_compile_commands.sh
src/boot/config/: config.hpp  environment.hpp
src/boot/parser/: interface.hpp  parser.hpp
src/bwrap/: bwrap.hpp  bwrap_apparmor.cpp
src/cpp/: common.hpp  macro.hpp
src/cpp/lib/: bwrap.hpp  db.hpp  dwarfs.hpp  elf.hpp  env.hpp  fifo.hpp  ipc.hpp  linux.hpp  log.hpp  match.hpp  squashfs.hpp  subprocess.hpp
src/cpp/lib/db/: bind.hpp  desktop.hpp
src/cpp/lib/reserved/: desktop.hpp  icon.hpp  notify.hpp  permissions.hpp  reserved.hpp
src/cpp/std/: enum.hpp  exception.hpp  filesystem.hpp
src/db/: bind.hpp  boot.hpp  db.hpp  desktop.hpp  env.hpp  environment.hpp  recipe.hpp  remote.hpp
src/db/portal/: daemon.hpp  dispatcher.hpp  message.hpp
src/filesystems/: ciopfs.hpp  controller.hpp  dwarfs.hpp  filesystem.hpp  filesystems.hpp  layers.hpp  overlayfs.hpp  squashfs.hpp  unionfs.hpp  utils.hpp
src/janitor/: janitor.cpp
src/lib/: elf.hpp  env.hpp  fuse.hpp  image.hpp  linux.hpp  log.hpp  match.hpp  subprocess.hpp
src/lib/linux/: fd.hpp  fifo.hpp
src/lib/subprocess/: child.hpp  pipe.hpp
src/magic/: magic.cpp
src/parser/: executor.hpp  interface.hpp  parser.hpp
src/parser/cmd/: bind.hpp  desktop.hpp  help.hpp  icon.hpp  layers.hpp  recipe.hpp  unshare.hpp
src/portal/: child.hpp  config.hpp  fifo.hpp  portal.hpp  portal_daemon.cpp  portal_dispatcher.cpp  portal_guest.cpp  portal_host.cpp
src/reserved/: bind.hpp  boot.hpp  casefold.hpp  desktop.hpp  env.hpp  icon.hpp  notify.hpp  overlay.hpp  permissions.hpp  remote.hpp  reserved.hpp  unshare.hpp
src/std/: concept.hpp  enum.hpp  exception.hpp  expected.hpp  filesystem.hpp  functional.hpp  string.hpp  vector.hpp
test/: CMakeLists.txt  bindings.py  boot.py  commit.py  desktop.py  environment.py  exec.py  instance.py  layer.py  magic.py  metadata.py  permissions.py  portal.py  root.py  test.py
test/cli/: bindings.py  boot.py  casefold.py  commit.py  desktop.py  environment.py  exec.py  instance.py  layer.py  overlay.py  permissions.py  portal.py  recipe.py  remote.py  root.py  test.py  test_base.py  test_runner.py  version.py
test/cli/bindings/: add.py  common.py  delete.py  list.py
test/cli/boot/: clear.py  cli.py  common.py  set.py  show.py
test/cli/casefold/: common.py  off.py  on.py
test/cli/desktop/: clean.py  common.py  dump.py  enable.py  setup.py
test/cli/environment/: add.py  clear.py  cli.py  common.py  delete.py  identity.py  list.py  set.py
test/cli/execute/: common.py  execute.py
test/cli/instance/: cli.py  common.py  exec.py  list.py
test/cli/layer/: commit.py  common.py  create.py  list.py
test/cli/overlay/: common.py  set.py  show.py
test/cli/permissions/: add.py  clear.py  common.py  delete.py  list.py  set.py
test/cli/portal/: common.py  portal.py
test/cli/recipe/: cli.py  common.py  fetch.py  info.py  install.py
test/cli/remote/: clear.py  cli.py  common.py  set.py  show.py  workflow.py
test/cli/root/: common.py  root.py
test/cli/unshare/: add.py  clear.py  common.py  delete.py  list.py  set.py
test/cli/version/: common.py  deps.py  full.py  short.py
test/meta/: build_info.py  test.py
test/misc/: fim_dir_data.py  fim_layers.py
test/src/: test.hpp
test/src/lib/: test_elf.cpp  test_env.cpp  test_fuse.cpp  test_image.cpp  test_linux.cpp  test_log.cpp  test_subprocess.cpp
test/src/std/: test_concept.cpp  test_enum.cpp  test_expected.cpp  test_filesystem.cpp  test_string.cpp  test_vector.cpp
(+1 files in other folders)
